# serde_hyprlang

./: Cargo.toml  LICENSE  Makefile
src/: de.rs  lib.rs  ser.rs  types.rs
tests/: simple_serialize.rs  type_test.rs
